# WorldWideAnthropomorphicTreeProtocol

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTRUCTIONS.md  ProjectPlan.md  Readme.md
common/backend_cpp/composite/: composite_backend.cpp  composite_backend.h
common/backend_cpp/file/: file_backend.cpp  file_backend.h
common/backend_cpp/http3_client/: http3_client_backend.cpp  http3_client_backend.h
common/backend_cpp/interface/: backend.h  http3_tree_message.cpp  http3_tree_message.h  http3_tree_message_helpers.cpp  http3_tree_message_helpers.h  tree_node.cpp  tree_node.h
common/backend_cpp/memory/include/: memory_tree.h  simple_backend.h  threadsafe_backend.h  transactional_backend.h
common/backend_cpp/memory/src/: memory_tree.cpp  simple_backend.cpp  threadsafe_backend.cpp  transactional_backend.cpp
common/backend_cpp/structure/: composite_backend.cpp  composite_backend.h  redirected_backend.cpp  redirected_backend.h
common/frontend/: frontend_base.h
common/frontend/backend_tester_cpp/: backend_tester.cpp  backend_tester.h
common/frontend/cloning_mediator_cpp/: cloning_mediator.cpp
common/frontend/http3_server_cpp/: http3_server.cpp  http3_server.h
common/frontend/mediator_cpp/: cloning_mediator.cpp  cloning_mediator.h  yaml_mediator.cpp  yaml_mediator.h
common/frontend/wwatp_service_cpp/: config_error.h  wwatp_service.cpp  wwatp_service.h
common/include/: client.h  communication.h  config_base.h  debug.h  memory_pool.h  network.h  quic_connector.h  quic_listener.h  server.h  server_base.h  shared_chunk.h  siphash.h  tcp_communication.h  tls_client_context_boringssl.h  tls_client_session_boringssl.h  tls_session_base_quictls.h  util.h
common/src/: config_base.cc  quic_connector.cpp  quic_listener.cpp  server_base.cc  shared_chunk.cpp  tcp_communication.cpp  util.cc
common/transport/include/: client.h  client_base.h  communication.h  config_base.h  config_yaml.h  http.h  quic_connector.h  quic_connector_c.h  quic_listener.h  request.h  server.h  server_base.h  shared.h  shared_chunk.h  tcp_communication.h  template.h  tls_client_context_boringssl.h  tls_server_context_boringssl.h  tls_server_session_boringssl.h  tls_shared_boringssl.h  urlparse.h  util.h
common/transport/src/: client_base.cc  config_base.cc  memory_pool.cpp  quic_connector.cpp  quic_connector_c.cc  quic_listener.cpp  shared.cc  shared_chunk.cpp  tcp_communication.cpp  tls_client_context_boringssl.cc  tls_client_session_boringssl.cc  tls_server_context_boringssl.cc  tls_server_session_boringssl.cc
js_client_lib/: .editorconfig  .eslintrc.json  .gitignore  README.md  TODO.md  communication.js  eslint.config.js  http3_client.js  http3_client_updater.js  index.js  package-lock.json  package.json  quic_communication.js  tcp_communication.js  vitest.config.mjs
js_client_lib/interface/: backend.js  http3_tree_message.js  http3_tree_message_helpers.js  maybe.js  simple_backend.js  tree_node.js
js_client_lib/native/: README.md  binding.gyp  package.json
js_client_lib/native/src/: addon.cc
js_client_lib/test/: backend_interface.test.js  create_transport.test.js  ffi_sanity.test.js  http3_client_backend.test.js  http3_client_static_asset.test.js  http3_client_updater.test.js  http3_tree_message.test.js  http3_tree_message_helpers.test.js  libwwatp_quic_check.py  maybe.test.js  native_quic.test.js  node_webtransport_emulator.test.js  simple_backend.test.js  smoke.test.js  transactions_helpers.test.js  transport.test.js  transport_node_webtransport_mock.test.js  tree_node_properties.test.js  tree_node_version.test.js  webtransport_communication.test.js
js_client_lib/test/backend_testbed/: backend_testbed.js  backend_testbed.test.js
js_client_lib/test/resources/: wwatp_server_config.native.yaml  wwatp_server_config.webtransport.yaml  wwatp_server_config.yaml
js_client_lib/test/system/: server_mock.js  system_mock_transport.test.js  system_node_webtransport_mock.test.js  system_real_server.test.js  system_webtransport_mock_updater.test.js  system_webtransport_polyfill.test.js  system_webtransport_polyfill_notifications.test.js  system_webtransport_polyfill_roundtrip.test.js  system_webtransport_real_server.test.js
js_client_lib/transport/: communication.js  create_transport.js  create_webtransport_connector.js  curl_communication.js  fetch_communication.js  instrumentation.js  libcurl_transport.js  mock_communication.js  native_quic.js  node_webtransport_emulator.js  node_webtransport_mock.js  quic_communication.js  request.js  stream_identifier.js  webtransport_communication.js
server/: REQUIREMENTS.md  main.cpp
test_instances/backend_cpp_tester/: backend_cpp_tester.cpp
test_instances/catch2_unit_tests/: backend_cpp_tests.cpp  backend_testbed.cpp  backend_testbed.h  catch2_unit_tests.cpp  frontend_cpp_tests.cpp  http3_message_helper_tests.cpp  http3_message_tests.cpp  shared_chunk_tests.cpp  test_setup.cpp  tree_node_tests.cpp  yaml_tests.cpp
test_instances/data/: libtest_index.html
test_instances/http3_client_backend_tester/: http3_client_backend_tester.cpp
test_instances/js_library_tester/: main.js
test_instances/library_tester/: library_tester.cpp  main.cpp
test_instances/memory_pool_tester/: memory_pool_tester.cpp
test_instances/shared_chunk_tester/: main.cpp  shared_chunk_tester.cpp
